--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         <img class="logo" src="" alt="logo Evita">
 
         <nav class="menu">
-
+           <!-- 
+               <div class="menu__mobile-logo"> 
+                Logo 
+            </div>
+            -->
             <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
 
             <label for="menu-checkbox" class="menu__toggler">&#x2630;</label>
-
             <ul class="menu__tabs">
                 <li class="menu__list"><a class="menu__item" href="#">O nás</a></li>
 				<li class="menu__list"><a class="menu__item" href="#">Ppl</a></li>
@@ -42,7 +45,7 @@
 
         <!--main template-->
        
-        <section class="main-information">
+        <section class="container">
 
              <!--Aside boxes with opening hours and actualities-->
             <aside class="aside-boxes">
@@ -84,7 +87,7 @@
             </aside> 
         </section>
 
-            <div class="main-information__content">
+            <section class="main-information">
 
                 <h2 class="title main-information__title--medium">Prodejna zdravé výživy E-vita</h2>
                     
@@ -109,7 +112,7 @@
                             <img class="logo-small__logo" src="Images/zasilkovna-logo.png" alt="logo Zásilkovna">
                         </a>
                     </div>
-                </div>
+                </section>
 
         <section class="Outside-photo">
             <img class="Outside-photo__shop" src="Images/obchod.jpg" alt="Obchod">
