complete hamburger menu

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: E-vita zdravá výživa
         ullam porro animi vero magnam? Quis laudantium tempore at fugit omnis magni vero reprehenderit doloribus eum tenetur!</p>
     </div>
 
-<!--Brand logos-->
+<!--Brand logo
 <section class="section-logos">
     <img src="" alt="Obchod">
     <img src="" alt="Obchod">
@@ -57,6 +57,6 @@ title: E-vita zdravá výživa
     <img src="" alt="Obchod">
     <img src="" alt="Obchod"> 
 </section>
-
+-->
    
 
