logo zasilkovna fixed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: E-vita zdravá výživa
                 <img class="logo-small__logo" src="Images/ppl-logo.png" alt="logo PPL">
             </a>
 
-            <a href="/zásilkovna/">
+            <a href="/zasilkovna/">
                 <img class="logo-small__logo" src="Images/zasilkovna-logo.png" alt="logo Zásilkovna">
             </a>
         </div>
