--- a/kontakt.html
+++ b/kontakt.html
@@ -29,5 +29,8 @@ title: E-vita zdravá výživa
     
 </section>
 
-    <iframe class="google-map" src="https://www.google.com/maps/d/embed?mid=1ZpBtXysdXf7y2xvg5U86mmklQ2pBkZQ&ehbc=2E312F" width="640" height="480"></iframe>
+    <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.4220099566364!2d14.449656215884506!3d50.
+    02218772601078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b9182f7403535%3A0x906b633bc53c45c!2zRXZpdGEgLSBwcm9kZWpuYSB6ZHJhdsO9Y2ggcG90cmF2aW4gYSB2w7
+    1yb2Jrxa8sIFrDoXNpbGtvdm5hIHbDvWRlam7DrSBhIHBvZGFjw60gbcOtc3RvLCBQUEwgcGFyY2Vsc2hvcA!5e0!3m2!1scs!2scz!4v1653764030647!5m2!1scs!2scz" 
+    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
