--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 ---
 layout: main-template.njk
-title: E-vita zdravá výživa
+title: Kontakt
 ---
 
 <section class="main-information main-information__contact">
